--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-wrap">
                 <div class="header-left"></div>
                 <div class="header-right">
-                    <h1><span>Weather forecast</span></h1>
+                    <h1><span class="header-text">Weather forecast</span></h1>
                 </div>
             </div>
             <!-- Menu -->
@@ -90,9 +90,196 @@
                             <div class="temperature">16C°</div>
                         </div>
                     </div>
+                    <div class="fourteen">
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">19</div>
+                                <div class="day">Fri</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">20</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">20</div>
+                                <div class="day">Sat</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">21</div>
+                                <div class="day">Sun</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">22</div>
+                                <div class="day">Mon</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">23</div>
+                                <div class="day">tue</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">24</div>
+                                <div class="day">Wed</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">25</div>
+                                <div class="day">Thu</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">26</div>
+                                <div class="day">Fri</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">27</div>
+                                <div class="day">Sat</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">28</div>
+                                <div class="day">Sun</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">29</div>
+                                <div class="day">Mon</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">30</div>
+                                <div class="day">Tue</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">31</div>
+                                <div class="day">Wed</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                        <div class="column">
+                            <div class="day-box">
+                                <div class="date">1</div>
+                                <div class="day">Thu</div>
+                            </div>
+                            <div class="day-icon">
+                                <img src="icons/day_clear.svg" alt="">
+                            </div>
+                            <div class="max-temperature temp-default">
+                                30
+                            </div>
+                            <div class="min-temperature temp-default">19</div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="map" style="width: 300px; height:300px"></div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
