--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             <div class="forecast-card">
                 <div class="now">
                     <div class="city-select-container">
-                        <div class="city-select">New York ></div>
+                        <select class="city-select">
+                            <option value="Hatvan">Hatvan ></option>
+                            <option value="Budapest">Budapest ></option>
+                            <option value="London">London ></option>
+                        </select>
                     </div>
                     <div class="whattowear">
                         <p class="what-to-wear">What to wear today?</p>
