--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
                 <div class="now">
                     <div class="city-select-container">
                         <select class="city-select">
-                            <option value="Hatvan">Hatvan ></option>
-                            <option value="Budapest">Budapest ></option>
-                            <option value="London">London ></option>
+                            <option value="Vancouver">Vancouver</option>
+                            <option value="Budapest">Budapest</option>
+                            <option value="London">London</option>
+                            <option value="Barcelona">Barcelona</option>
+                            <option value="Boston">Boston</option>
+                            <option value="Peking">Peking</option>
                         </select>
                     </div>
                     <div class="whattowear">
@@ -52,46 +55,46 @@
                 <div class="forecast-wrap">
                     <div class="thirty-six-forecast">
                         <div class="column separator">
-                            <div class="time-of-day">Tonight</div>
+                            <div class="time-of-day">Now</div>
                             <div class="icon">
-                                <img src="icons/night_half_moon_partial_cloud.svg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="temperature">19C°</div>
+                            <div class="temperature"></div>
                         </div>
                         <div class="column">
-                            <div class="time-of-day">Tomorrow morning</div>
+                            <div class="time-of-day">+3 hours</div>
                             <div class="icon">
-                                <img src="icons/day_partial_cloud.svg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="temperature">19C°</div>
+                            <div class="temperature"></div>
                         </div>
                         <div class="column">
-                            <div class="time-of-day">Tomorrow noon</div>
+                            <div class="time-of-day">+6 hours</div>
                             <div class="icon">
-                                <img src="icons/day_clear.svg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="temperature">23C°</div>
+                            <div class="temperature"></div>
                         </div>
                         <div class="column">
-                            <div class="time-of-day">Tomorrow afternoon</div>
+                            <div class="time-of-day">+9 hours</div>
                             <div class="icon">
-                                <img src="icons/day_rain.svg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="temperature">26C°</div>
+                            <div class="temperature"></div>
                         </div>
                         <div class="column separator">
-                            <div class="time-of-day">Tomorrow evening</div>
+                            <div class="time-of-day">+12 hours</div>
                             <div class="icon">
-                                <img src="icons/night_half_moon_rain_thunder.svg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="temperature">19C°</div>
+                            <div class="temperature"></div>
                         </div>
                         <div class="column">
-                            <div class="time-of-day">Tomorrow night</div>
+                            <div class="time-of-day">+15 hours</div>
                             <div class="icon">
-                                <img src="icons/night_half_moon_partial_cloud.svg" alt="">
+                                <img src="" alt="">
                             </div>
-                            <div class="temperature">16C°</div>
+                            <div class="temperature"></div>
                         </div>
                     </div>
                     <div class="fourteen">
