google map implementation

--- a/index.html
+++ b/index.html
@@ -33,134 +33,138 @@
             </div>
             <!-- Forecast card -->
             <div class="forecast-card">
-                <div class="now">
-                    <div class="city-select-container">
-                        <select class="city-select">
-                            <option value="Vancouver">Vancouver</option>
-                            <option value="Budapest">Budapest</option>
-                            <option value="London">London</option>
-                            <option value="Barcelona">Barcelona</option>
-                            <option value="Boston">Boston</option>
-                            <option value="Peking">Peking</option>
-                        </select>
-                    </div>
-                    <div class="whattowear">
-                        <p class="what-to-wear">What to wear today?</p>
-                        <p class="wear">Summer clothes</p>
-                        <a href="#">
-                            <img class="wear-image" src="images/summer-clothes.jpg" alt="Summer clothes">
-                        </a>
-                    </div>
-                </div>
-                <div class="forecast-wrap">
-                    <div class="thirty-six-forecast">
-                        <div class="column separator">
-                            <div class="time-of-day">Now</div>
-                            <div class="icon">
-                                <img src="" alt="">
-                            </div>
-                            <div class="temperature"></div>
+                <div class="forecast-card-inner-wrapper">
+                    <div class="now">
+                        <div class="city-select-container">
+                            <select class="city-select">
+                                <option value="Vancouver">Vancouver</option>
+                                <option value="Budapest">Budapest</option>
+                                <option value="London">London</option>
+                                <option value="Barcelona">Barcelona</option>
+                                <option value="Boston">Boston</option>
+                                <option value="Berlin">Berlin</option>
+                                <option value="Wellington">Wellington</option>
+                            </select>
                         </div>
-                        <div class="column">
-                            <div class="time-of-day">+3 hours</div>
-                            <div class="icon">
-                                <img src="" alt="">
-                            </div>
-                            <div class="temperature"></div>
-                        </div>
-                        <div class="column">
-                            <div class="time-of-day">+6 hours</div>
-                            <div class="icon">
-                                <img src="" alt="">
-                            </div>
-                            <div class="temperature"></div>
-                        </div>
-                        <div class="column">
-                            <div class="time-of-day">+9 hours</div>
-                            <div class="icon">
-                                <img src="" alt="">
-                            </div>
-                            <div class="temperature"></div>
-                        </div>
-                        <div class="column separator">
-                            <div class="time-of-day">+12 hours</div>
-                            <div class="icon">
-                                <img src="" alt="">
-                            </div>
-                            <div class="temperature"></div>
-                        </div>
-                        <div class="column">
-                            <div class="time-of-day">+15 hours</div>
-                            <div class="icon">
-                                <img src="" alt="">
-                            </div>
-                            <div class="temperature"></div>
+                        <div class="whattowear">
+                            <p class="what-to-wear">What to wear today?</p>
+                            <p class="wear">Summer clothes</p>
+                            <a href="#">
+                                <img class="wear-image" src="images/summer-clothes.jpg" alt="Summer clothes">
+                            </a>
                         </div>
                     </div>
-                    <div class="fourteen">
-                        <div class="column">
-                            <div class="day-box">
-                                <div class="date"></div>
-                                <div class="day"></div>
+                    <div class="forecast-wrap">
+                        <div class="thirty-six-forecast">
+                            <div class="column separator">
+                                <div class="time-of-day">Now</div>
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="temperature"></div>
                             </div>
-                            <div class="day-icon">
-                                <img src="icons/day_clear.svg" alt="">
+                            <div class="column">
+                                <div class="time-of-day">+3 hours</div>
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="temperature"></div>
                             </div>
-                            <div class="max-temperature temp-default"></div>
-                            <div class="min-temperature temp-default"></div>
+                            <div class="column">
+                                <div class="time-of-day">+6 hours</div>
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="temperature"></div>
+                            </div>
+                            <div class="column">
+                                <div class="time-of-day">+9 hours</div>
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="temperature"></div>
+                            </div>
+                            <div class="column separator">
+                                <div class="time-of-day">+12 hours</div>
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="temperature"></div>
+                            </div>
+                            <div class="column">
+                                <div class="time-of-day">+15 hours</div>
+                                <div class="icon">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="temperature"></div>
+                            </div>
                         </div>
-                        <div class="column">
-                            <div class="day-box">
-                                <div class="date"></div>
-                                <div class="day"></div>
+                        <div class="fourteen">
+                            <div class="column">
+                                <div class="day-box">
+                                    <div class="date"></div>
+                                    <div class="day"></div>
+                                </div>
+                                <div class="day-icon">
+                                    <img src="icons/day_clear.svg" alt="">
+                                </div>
+                                <div class="max-temperature temp-default"></div>
+                                <div class="min-temperature temp-default"></div>
                             </div>
-                            <div class="day-icon">
-                                <img src="icons/day_clear.svg" alt="">
+                            <div class="column">
+                                <div class="day-box">
+                                    <div class="date"></div>
+                                    <div class="day"></div>
+                                </div>
+                                <div class="day-icon">
+                                    <img src="icons/day_clear.svg" alt="">
+                                </div>
+                                <div class="max-temperature temp-default"></div>
+                                <div class="min-temperature temp-default"></div>
                             </div>
-                            <div class="max-temperature temp-default"></div>
-                            <div class="min-temperature temp-default"></div>
+                            <div class="column">
+                                <div class="day-box">
+                                    <div class="date"></div>
+                                    <div class="day"></div>
+                                </div>
+                                <div class="day-icon">
+                                    <img src="icons/day_clear.svg" alt="">
+                                </div>
+                                <div class="max-temperature temp-default"></div>
+                                <div class="min-temperature temp-default"></div>
+                            </div>
+                            <div class="column">
+                                <div class="day-box">
+                                    <div class="date"></div>
+                                    <div class="day"></div>
+                                </div>
+                                <div class="day-icon">
+                                    <img src="icons/day_clear.svg" alt="">
+                                </div>
+                                <div class="max-temperature temp-default"></div>
+                                <div class="min-temperature temp-default"></div>
+                            </div>
+                            <div class="column">
+                                <div class="day-box">
+                                    <div class="date"></div>
+                                    <div class="day"></div>
+                                </div>
+                                <div class="day-icon">
+                                    <img src="icons/day_clear.svg" alt="">
+                                </div>
+                                <div class="max-temperature temp-default"></div>
+                                <div class="min-temperature temp-default"></div>
+                            </div>
                         </div>
-                        <div class="column">
-                            <div class="day-box">
-                                <div class="date"></div>
-                                <div class="day"></div>
-                            </div>
-                            <div class="day-icon">
-                                <img src="icons/day_clear.svg" alt="">
-                            </div>
-                            <div class="max-temperature temp-default"></div>
-                            <div class="min-temperature temp-default"></div>
-                        </div>
-                        <div class="column">
-                            <div class="day-box">
-                                <div class="date"></div>
-                                <div class="day"></div>
-                            </div>
-                            <div class="day-icon">
-                                <img src="icons/day_clear.svg" alt="">
-                            </div>
-                            <div class="max-temperature temp-default"></div>
-                            <div class="min-temperature temp-default"></div>
-                        </div>
-                        <div class="column">
-                            <div class="day-box">
-                                <div class="date"></div>
-                                <div class="day"></div>
-                            </div>
-                            <div class="day-icon">
-                                <img src="icons/day_clear.svg" alt="">
-                            </div>
-                            <div class="max-temperature temp-default"></div>
-                            <div class="min-temperature temp-default"></div>
-                        </div>
-                        
                     </div>
                 </div>
             </div>
-            <div class="map"></div>
+            <div id="map"></div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/weather.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCopNeAGZu93FOc3_LJfB8dD3K1z-d0Ny0&callback=initMap"
+    async defer></script>
 </body>
 </html>
